<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Массив содержащий названия табов -->
    <string-array name="tabs_name">
        <item>Servers</item>
        <item>Players</item>
        <item>Game</item>
    </string-array>

    <string name="app_name">CSGO Servers and Players</string>
    <string name="text_servers">SERVERS</string>
    <string name="text_players">PLAYERS</string>
    <string name="text_info">INFO</string>
    <string name="fav_srv_text">Favorites servers</string>
    <string name="add_player_title">Add player:</string>
    <string name="add_server_title">Add server:</string>
    <string name="player_non_found">Player non found</string>
    <string name="toast_update_server_list">List of servers updated</string>
    <string name="toast_update_players_list">List of players updated</string>
    <string name="toast_update_game_info">Updated</string>
    <string name="error_network_text">Unable to update information. Check Internet connection and retry</string>
    <string name="toast_non_found">Player is not found</string>
    <string name="text_add_ip">Server added to favorites</string>
    <string name="text_add_id">Player added to list</string>
    <string name="text_del_ip">Server s removed from favorites</string>
    <string name="text_del_id">Player removed</string>
    <string name="err_get_server">Server not responding</string>
    <string name="title_favorites_players">Players</string>
    <string name="title_player_page">About player</string>
    <string name="title_info_page">About game</string>
    <string name="toast_update_server_info">Server Information updated</string>
    <string name="dialog_ip_text">For example: 46.174.50.240:27015</string>
    <string name="dialog_id_text">If steamcommunity.com/id/xxxxxxxxx/ enter xxxxxxxxx</string>
    <string name="online_players">Online players:</string>
    <string name="online_servers">Online servers:</string>
    <string name="searching_players">Searching players:</string>
    <string name="search_seconds_avg">Time search:</string>
    <string name="scheduler">Scheduler:</string>
    <string name="sessionslogon">Sessions logon:</string>
    <string name="steamcommunity">Steam community:</string>
    <string name="ieconitems">IEconItems:</string>
    <string name="leaderboards">Leaderboards:</string>
    <string name="check_massage">The application retrieves information from the internet and does not work without it. Check network connection and click Update button</string>
    <string name="check_bd_servers">Your list of servers is empty, to add click Add in the panel and enter IP address of the server</string>
    <string name="ip_img_text">You can find the address by viewing the information about the server from favorite list of your CS GO</string>
    <string name="check_player">Your list of players is empty, click Add button to add a player to the list</string>
    <string name="id_img_text">To do this, type the last part of URL address of the player page in Steam Community. For example if URL looks like this […], type alastaire61</string>
    <string name="version">Version:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="matchmaking">Matchmaking</string>
    <string name="services">Services</string>
    <string name="app">App</string>
    <string name="last_online_status">Last Online</string>
    <string name="online_status">Online</string>
    <string name="busy_status">Busy</string>
    <string name="away_status">Away</string>
    <string name="snooze_status">Snooze</string>
    <string name="looking_to_trade_status">Looking to trade</string>
    <string name="looking_to_play_status">Looking to play</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="server_name">Name:</string>
    <string name="game_name">Game:</string>
    <string name="adress">Address:</string>
    <string name="tags">Tags:</string>
    <string name="map_name">Map:</string>
    <string name="players">Players:  </string>
    <string name="text_server">About server</string>
    <string name="playing">Playing</string>

    <string name="drawer_navigation">Navigation</string>
    <string name="drawer_links">Links</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_help">How to</string>
    <string name="drawer_rating">Rating</string>

    <string name="dialog_add_button">Add</string>
    <string name="dialog_cansel_button">Cansel</string>
    <string name="input_error">Field free</string>
    <string name="banner_id">ca-app-pub-7733009523980326/4356022897</string>
</resources>
