<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:orientation="vertical"
    android:clickable="false"
    android:paddingTop="3dp"
    android:paddingBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/player_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="7"
                    android:text="@string/player"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_score"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/score"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/player_rate"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="8dp"
                    android:text="@string/time"
                    android:textSize="14sp" />

            </LinearLayout>

</LinearLayout>
