<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/message_error_network"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:paddingTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/TextViewBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="@string/matchmaking"
                        android:textSize="18sp"
                        android:paddingBottom="3dp"
                        android:paddingTop="2dp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="6dp"
                        android:paddingTop="30dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/online_players"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/players"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/online_servers"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/servers"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/searching_players"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/searching"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search_seconds_avg"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/search_seconds"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scheduler"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/scheduler"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp" />
                        </TableRow>
                    </TableLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        style="@style/TextViewBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="6dp"
                        android:paddingTop="2dp"
                        android:text="@string/services"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="6dp"
                        android:paddingTop="25dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sessionslogon" />

                            <TextView
                                android:id="@+id/sessions_logon"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/steamcommunity" />

                            <TextView
                                android:id="@+id/steam_community"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ieconitems" />

                            <TextView
                                android:id="@+id/iecon_items"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/leaderboards" />

                            <TextView
                                android:id="@+id/leaderboards"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                        </TableRow>

                    </TableLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        style="@style/TextViewBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="2dp"
                        android:text="@string/app"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="6dp"
                        android:paddingTop="25dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version" />

                            <TextView
                                android:id="@+id/version"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/timestamp" />

                            <TextView
                                android:id="@+id/timestamp"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time" />

                            <TextView
                                android:id="@+id/time"
                                style="@style/TextField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp" />

                        </TableRow>

                    </TableLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>