<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            style="@style/CustomToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="3dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold"
            android:lines="1"
            android:scrollHorizontally="true" />

        </HorizontalScrollView>

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/avloadingIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                app:indicator="Pacman" />

        </android.support.v7.widget.Toolbar>

    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@android:color/background_light">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/main.appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/main.collapsing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginEnd="64dp"
                    app:expandedTitleMarginStart="48dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <LinearLayout
                        android:id="@+id/si_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:scaleType="fitEnd"
                        app:layout_collapseMode="pin"
                        android:paddingTop="10dp">

                        <TableLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp">

                            <TableRow
                                android:id="@+id/tableRow3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp">

                                <TextView
                                    android:id="@+id/textView3"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/game_name"
                                    android:textColor="#fff" />

                                <TextView
                                    android:id="@+id/game_name"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:textColor="#fff" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/tableRow4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp">

                                <TextView
                                    android:id="@+id/tete"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/adress"
                                    android:textColor="#fff" />

                                <TextView
                                    android:id="@+id/ip_address"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:textColor="#fff" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/tableRow5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/textView7"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tags"
                                    android:textColor="#fff" />

                                <HorizontalScrollView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scrollbars="none"
                                    android:paddingBottom="10dp">

                                    <TextView
                                        android:id="@+id/tags"
                                        style="@style/TextField"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="6dp"
                                        android:scrollHorizontally="true"
                                        android:textColor="#fff" />
                                </HorizontalScrollView>
                            </TableRow>

                            <TableRow
                                android:id="@+id/tableRow6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                >

                                <TextView
                                    android:id="@+id/textView8"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/map_name"
                                    android:textColor="#fff" />

                                <TextView
                                    android:id="@+id/map"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:textColor="#fff" />
                            </TableRow>

                            <TableRow
                                android:id="@+id/tableRow7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/textView10"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/players"
                                    android:textColor="#fff" />

                                <TextView
                                    android:id="@+id/players"
                                    style="@style/TextField"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="6dp"
                                    android:textColor="#fff" />
                            </TableRow>

                        </TableLayout>
                    </LinearLayout>

                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/si_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="2dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="11dp">

                        <TextView
                            android:id="@+id/text_player_name"
                            style="@style/TextViewBoldStr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:text="@string/player"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/text_score"
                            style="@style/TextViewBoldStr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/score"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/textView1"
                            style="@style/TextViewBoldStr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:layout_weight="1"
                            android:text="@string/time"
                            android:textSize="17sp" />

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/details_list_players"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        />


                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
            </android.support.v4.widget.SwipeRefreshLayout>
        </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>